--- a/intro.html
+++ b/intro.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <title>introduction</title>
+<meta charset="utf-8">
 </head>
 <body>
 
@@ -9,10 +10,134 @@
 
     <img src="http://placehold.it">
 
-
+<a href="#p1" >end of page</a>
 <h1>
-    kavehmollaei
+    computer
 </h1>
+<h2>
+    platform
+</h2>
+<p>
+    <pre>
+    here may be times when  need to <mark>name a Git branch</mark>.
+    This is because if the naming is wrong and other developers continue to work with it,
+    <sup>you</sup>you may run into <em><del>problem</del></em>. Fortunately, despite the tight integration and various forks,
+    if you want to rename a Git branch, it’s not a big issue.
+    To do <sub>kaveh</sub>this, use the -m <b>command</b>. <strong>The corresponding syntax always <a href="https://google.com" target="_blank" title="my title">follows</a> the same structure:</strong>
+</pre>
+</p>
+<hr>
+
+<img src="images.jpeg" alt="fidlity">
+<picture>
+    <source srcset="">
+    
+</picture>
+
+<a href="http://www.yahoo.com" target="_blank">yahoo</a>
+
+<table>
+
+<thead>
+<tr>
+    <th>id</th>
+    <th>name</th>
+    <th>age</th>
+
+
+</tr>
+</thead>
+<tbody>
+
+
+<tr>
+    <td>1</td>
+   <td>kaveh</td>
+   <td>36</td> 
+</tr>
+<tr>
+    <td>2</td>
+    <td>kamran</td>
+    <td>33</td>
+</tr>
+</tbody>
+
+</table>
+<p>
+    <pre>
+    here may be times when  need to <mark>name a Git branch</mark>.
+    This is because if the naming is wrong and other developers continue to work with it,
+    <sup>you</sup>you may run into <em><del>problem</del></em>. Fortunately, despite the tight integration and various forks,
+    if you want to rename a Git branch, it’s not a big issue.
+    To do <sub>kaveh</sub>this, use the -m <b>command</b>. <strong>The corresponding syntax always <a href="https://google.com" target="_blank" title="my title">follows</a> the same structure:</strong>
+</pre>
+</p>
+<p>
+    <pre>
+    here may be times when  need to <mark>name a Git branch</mark>.
+    This is because if the naming is wrong and other developers continue to work with it,
+    <sup>you</sup>you may run into <em><del>problem</del></em>. Fortunately, despite the tight integration and various forks,
+    if you want to rename a Git branch, it’s not a big issue.
+    To do <sub>kaveh</sub>this, use the -m <b>command</b>. <strong>The corresponding syntax always <a href="https://google.com" target="_blank" title="my title">follows</a> the same structure:</strong>
+</pre>
+</p>
+<p>
+    <pre>
+    here may be times when  need to <mark>name a Git branch</mark>.
+    This is because if the naming is wrong and other developers continue to work with it,
+    <sup>you</sup>you may run into <em><del>problem</del></em>. Fortunately, despite the tight integration and various forks,
+    if you want to rename a Git branch, it’s not a big issue.
+    To do <sub>kaveh</sub>this, use the -m <b>command</b>. <strong>The corresponding syntax always <a href="https://google.com" target="_blank" title="my title">follows</a> the same structure:</strong>
+</pre>
+</p>
+<p>
+    <pre>
+    here may be times when  need to <mark>name a Git branch</mark>.
+    This is because if the naming is wrong and other developers continue to work with it,
+    <sup>you</sup>you may run into <em><del>problem</del></em>. Fortunately, despite the tight integration and various forks,
+    if you want to rename a Git branch, it’s not a big issue.
+    To do <sub>kaveh</sub>this, use the -m <b>command</b>. <strong>The corresponding syntax always <a href="https://google.com" target="_blank" title="my title">follows</a> the same structure:</strong>
+</pre>
+</p>
+<p>
+    <pre>
+    here may be times when  need to <mark>name a Git branch</mark>.
+    This is because if the naming is wrong and other developers continue to work with it,
+    <sup>you</sup>you may run into <em><del>problem</del></em>. Fortunately, despite the tight integration and various forks,
+    if you want to rename a Git branch, it’s not a big issue.
+    To do <sub>kaveh</sub>this, use the -m <b>command</b>. <strong>The corresponding syntax always <a href="https://google.com" target="_blank" title="my title">follows</a> the same structure:</strong>
+</pre>
+</p>
+<p>
+    <pre>
+    here may be times when  need to <mark>name a Git branch</mark>.
+    This is because if the naming is wrong and other developers continue to work with it,
+    <sup>you</sup>you may run into <em><del>problem</del></em>. Fortunately, despite the tight integration and various forks,
+    if you want to rename a Git branch, it’s not a big issue.
+    To do <sub>kaveh</sub>this, use the -m <b>command</b>. <strong>The corresponding syntax always <a href="https://google.com" target="_blank" title="my title">follows</a> the same structure:</strong>
+</pre>
+</p>
+<p>
+    <pre>
+    here may be times when  need to <mark>name a Git branch</mark>.
+    This is because if the naming is wrong and other developers continue to work with it,
+    <sup>you</sup>you may run into <em><del>problem</del></em>. Fortunately, despite the tight integration and various forks,
+    if you want to rename a Git branch, it’s not a big issue.
+    To do <sub>kaveh</sub>this, use the -m <b>command</b>. <strong>The corresponding syntax always <a href="https://google.com" target="_blank" title="my title">follows</a> the same structure:</strong>
+</pre>
+</p>
+<p id="p1">
+    <pre>
+    here may be times when  need to <mark>name a Git branch</mark>.
+    This is because if the naming is wrong and other developers continue to work with it,
+    <sup>you</sup>you may run into <em><del>problem</del></em>. Fortunately, despite the tight integration and various forks,
+    if you want to rename a Git branch, it’s not a big issue.
+    To do <sub>kaveh</sub>this, use the -m <b>command</b>. <strong>The corresponding syntax always <a href="https://google.com" target="_blank" title="my title">follows</a> the same structure:</strong>
+</pre>
+</p>
+
+
+
 
 
 </body>
